--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "$NVMRC"
+          node-version: $NVMRC
 
       - name: Install dependencies
         run: yarn install
