--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+        with: 
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Create GitHub Release
         uses: DevCycleHQ/release-action@main
