--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.PAT_TOKEN }}
+
       - name: Set Git author
         run: |
           git config user.name 'github-actions[bot]'
