--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -39,7 +39,7 @@ jobs:
         run: yarn build
 
       - name: Bump CLI version
-        run: npm version patch --force
+        run: npm version major --force
 
       - name: Get latest tag
         run: echo "LATEST_TAG=$(git describe --abbrev=0 --tags)" >> $GITHUB_ENV
