--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,21 @@
 name: CLI Release
 
+# on:
+#   push:
+#     tags:
+#       - '*'
+
 on:
-  push:
-    tags:
-      - '*'
+  workflow_dispatch:
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-        with: 
-          token: ${{ secrets.PAT_TOKEN }}
+      # - name: Check out code
+      #   uses: actions/checkout@v3
+      #   with: 
+      #     token: ${{ secrets.PAT_TOKEN }}
 
       - name: Create GitHub Release
         uses: DevCycleHQ/release-action/gh-release@main
