--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -52,6 +52,8 @@ jobs:
 
       - name: Release
         uses: ./.github/actions/release
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update Doc
         uses: ./.github/actions/update-doc
