--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -8,7 +8,7 @@ permissions:
   contents: write
 
 jobs:
-  tag-new-version:
+  cli-release:
     runs-on: ubuntu-latest
     steps:      
       - name: Check out code
