--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -41,7 +41,10 @@ jobs:
         run: npm version patch --force
 
       - name: Get latest tag
-        run: echo "LATEST_TAG=$(git describe --abbrev=0 --tags)" >> $GITHUB_ENV
+        run: |
+          echo "LATEST_TAG=$(git describe --abbrev=0 --tags)" >> $GITHUB_ENV
+          git tag
+          git describe --abbrev=0 --tags
           
       - name: Commit and push tag to main branch
         run: |
