--- a/.github/actions/update-doc/action.yml
+++ b/.github/actions/update-doc/action.yml
@@ -24,17 +24,20 @@ runs:
     
     - name: Set Git author
       shell: bash
+      working-directory: devcycle-docs-fork
       run: |
         git config user.name 'github-actions[bot]'
         git config user.email 'github-actions[bot]@users.noreply.github.com'
 
     - name: Set branch name
       shell: bash
+      working-directory: devcycle-docs-fork
       id: get-branch-name
       run: echo "BRANCH_NAME=update-cli-version-to-${{ inputs.latest_tag }}" >> $GITHUB_ENV
 
     - name: Update CLI version in docs repo
       shell: bash
+      working-directory: devcycle-docs-fork
       run: |
         git checkout -b "$BRANCH_NAME"
         sed -i "s/const DVC_CLI_VERSION = .*/const DVC_CLI_VERSION = '${{ inputs.latest_tag }}' \/\/ auto updated by dvc cli release workflow/" docusaurus.config.js
@@ -43,10 +46,12 @@ runs:
 
     - name: Push code to docs repo
       shell: bash
+      working-directory: devcycle-docs-fork
       run: git push --set-upstream origin "$BRANCH_NAME"
 
     - name: Create PR
       shell: bash
+      working-directory: devcycle-docs-fork
       env:
         GH_TOKEN: ${{ inputs.access_token }}
       run: gh pr create --repo L-Joli/devcycle-docs-fork --base main --head "$BRANCH_NAME" --title "Update CLI version to $LATEST_TAG" --body "This PR was automatically created by the DevCycle CLI release workflow."
