--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -58,8 +58,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Update Doc
-        uses: ./.github/actions/update-doc
-        with:
-          latest_tag: $LATEST_TAG
-          access_token: ${{ secrets.PAT_TOKEN }}
+      # - name: Update Doc
+      #   uses: ./.github/actions/update-doc
+      #   with:
+      #     latest_tag: $LATEST_TAG
+      #     access_token: ${{ secrets.PAT_TOKEN }}
