--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -16,42 +16,42 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set Git author
-        run: |
-          git config user.name 'github-actions[bot]'
-          git config user.email 'github-actions[bot]@users.noreply.github.com'
+      # - name: Set Git author
+      #   run: |
+      #     git config user.name 'github-actions[bot]'
+      #     git config user.email 'github-actions[bot]@users.noreply.github.com'
       
-      - name: Get node version
-        id: get_node_version
-        run: |
-          echo "NVMRC=$(cat .nvmrc)" >> $GITHUB_OUTPUT
+      # - name: Get node version
+      #   id: get_node_version
+      #   run: |
+      #     echo "NVMRC=$(cat .nvmrc)" >> $GITHUB_OUTPUT
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "${{ steps.get_node_version.outputs.NVMRC }}"
+      # - name: Set up Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: "${{ steps.get_node_version.outputs.NVMRC }}"
 
-      - name: Install dependencies
-        run: yarn install
+      # - name: Install dependencies
+      #   run: yarn install
         
-      - name: Build
-        run: yarn build
+      # - name: Build
+      #   run: yarn build
 
-      - name: Bump CLI version
-        run: npm version patch --force
+      # - name: Bump CLI version
+      #   run: npm version patch --force
 
-      - name: Get latest tag
-        run: |
-          echo "LATEST_TAG=$(git describe --abbrev=0 --tags)" >> $GITHUB_ENV
-          git tag
-          git describe --abbrev=0 --tags
+      # - name: Get latest tag
+      #   run: |
+      #     echo "LATEST_TAG=$(git describe --abbrev=0 --tags)" >> $GITHUB_ENV
+      #     git tag
+      #     git describe --abbrev=0 --tags
           
-      - name: Commit and push tag to main branch
-        run: |
-          git add .
-          git commit --amend -m "Release $LATEST_TAG"
-          git tag -f $LATEST_TAG
-          git push origin main --follow-tags
+      # - name: Commit and push tag to main branch
+      #   run: |
+      #     git add .
+      #     git commit --amend -m "Release $LATEST_TAG"
+      #     git tag -f $LATEST_TAG
+      #     git push origin main --follow-tags
 
       - name: Release
         uses: ./.github/actions/release
